--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ aiogram==3.7.0
 magic-filter==1.0.12
 
 # Database
-tortoise-orm==0.21.4
+tortoise-orm>=0.21.0
 aerich==0.7.2
-aiosqlite==0.20.0
+aiosqlite>=0.17.0,<0.18.0
 asyncpg==0.29.0
 
 # State management
